--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,8 @@
 language: python
 python:
   - "2.7"
+  - "3.3"
+  - "3.4"
   - "3.5"
   - "3.5-dev" # 3.5 development branch
   - "3.6"
@@ -8,4 +10,4 @@ python:
 # command to install dependencies
 install: "python setup.py install"
 # command to run tests
-script: pytest
+script: python -m pytest
